<resources>
    <string name="app_name">فهرست موضوعی کتاب مقدس</string>
    <string name="large_text">کتاب مقدس</string>
    <string name="app_bar">کتاب مقدس</string>
    <string name="action_settings">خروج</string>
    <string name="omid">امید</string>
    <string name="entegham">انتقام و دشمنی</string>
    <string name="etaat">اطاعت</string>
    <string name="rasti">راستی</string>
    <string name="wife">روابط زن و شوهر</string>
    <string name="childs">روابط فرزندان و والدین</string>
    <string name="doa">دعا</string>
    <string name="davari">داوری</string>
    <string name="hayatevafer">حیات وافر</string>
    <string name="hayatejavidan">حیات جاویدان</string>
    <string name="hekmat">حکمت</string>
    <string name="tobe">توبه</string>
    <string name="bekhshesh">بخشش گناهان</string>
    <string name="jahanam">جهنم</string>
    <string name="iman">ایمان</string>
    <string name="title_activity_doshnam">Doshnam</string>
    <string name="Email">Azaad.zaferani@gmail.com</string>
    <string name="website">نمایش وب سایت</string>
    <string name="download_bibel">دانلود کتب عهدجدید</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="omid_titel">
موضوع دعا
    </string>
    <string name="omid01">
نیرومند باشید و دل قوی دارید،ای همۀ کسانی که برای خداوند انتظار می‌کشید. مزمور ۳۱-۲۴
        (برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="omid02">
    ۱۸- هان چشمان خداوند بر ترسندگان اوست، بر آنان که به محبت او امیدوارند،
۲۰- جان ما منتظر خداوند است؛ او اعانت و سپر ماست.
۲۲- خداوندا، محبت تو بر ما باد، چنانکه امید ما بر توست.
        مزمور۳۳ آیات ۱۸-۲۰-۲۲
        (برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="omid03">
پس حال، خداوندگارا، در انتظار چه باشم؟ امیدم بر توست! مزمور ۳۹-۷
        (برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="omid04">
ای جان من، چرا افسرده‌ای؟
چرا در اندرونم پریشانی؟
بر خدا امید دار،
زیرا که او را باز خواهم ستود؛
او را که رهانندۀ من و خدای من است. مزمور ۴۳-۵
(برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="omid05">
اما آنان که برای خداوند انتظار می‌کشند،
نیروی تازه خواهند یافت
و با بالهایی همچون عقاب اوج خواهند گرفت؛
خواهند دوید و خسته نخواهند شد؛
خواهند خرامید و درمانده نخواهند گردید. اشعیا۴۰-۳۱
        (برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="omid06">
زیرا فکرهایی را که برای شما دارم می‌دانم، که فکرهای سعادتمندی است و نه تیره‌بختی، تا به شما امید بخشم و آینده‌ای عطا کنم؛ این است فرمودۀ خداوند. ارمیا ۲۹-۱۱
        (برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="omid07">
متبارک باد خدا، پدر خداوند ما عیسی مسیح،1‏:3 یا:‏ ”خدا و پدر خداوند ما عیسی مسیح“. که پدر رحمتها و خدای همۀ دلگرمیهاست؛ 4که به ما در همۀ سختیهایمان دلگرمی می‌بخشد تا ما نیز بتوانیم با آن دلگرمی که از او یافته‌ایم، دیگران را که از سختیها می‌گذرند، دلگرم سازیم. دوم قرنتیان ۱-۳و۴
        (برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="omid08">
متبارک باد خدا و پدر خداوند ما عیسی مسیح که از رحمت عظیم خود، ما را به واسطۀ رستاخیز عیسی مسیح از مردگان، تولّدی تازه بخشید، برای امیدی زنده 4و میراثی فسادناپذیر و بی‌آلایش و ناپژمردنی که برای شما در آسمان نگاه داشته شده است؛ 5و شما نیز به قدرت خدا و به واسطۀ ایمان، محفوظ هستید برای نجاتی که از هم‌اکنون آماده شده است تا در زمان آخر به ظهور رسد؛ 6و در این بسیار شادمانید،1‏:6 یا:‏ «در آن زمان شادی بسیار خواهید کرد». هرچند اکنون زمانی کوتاه بنا به ضرورت در آزمایشهای گوناگون غمگین شده‌اید، 7تا اصالت ایمانتان در بوتۀ آزمایش به ثبوت رسد و به هنگام ظهور عیسی مسیح به تمجید و تجلیل و اکرام بینجامد، همان ایمان که بس گرانبهاتر از طلاست که هرچند فانی است، به وسیلۀ آتش آزموده می‌شود. 8شما گرچه او را ندیده‌اید، دوستش می‌دارید؛ و گرچه اکنون او را نمی‌بینید، به وی ایمان دارید و از شادمانی وصف‌ناپذیر و پرجلال آکنده‌اید، 9زیرا غایت ایمان خویش یعنی نجات جانهایتان را می‌یابید. اول پطرس ۱- ۳ تا ۹        (برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="omid09">
ببینید پدر چه محبتی به ما ارزانی داشته است تا فرزندان خدا خوانده شویم! و چنین نیز هستیم! از همین روست که دنیا ما را نمی‌شناسد، چرا که او را نشناخت. 2ای عزیزان، اینک فرزندانِ خداییم، ولی آنچه خواهیم بود هنوز آشکار نشده است. امّا می‌دانیم آنگاه که او ظهور کند،3‏:2 یا:‏ «آنگاه که آن ظاهر شود». مانند او خواهیم بود، چون او را چنانکه هست خواهیم دید. 3هر که چنین امیدی بر وی دارد، خود را پاک می‌سازد، چنانکه او پاک است. اول یوحنا۳-۱تا۳        (برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="child_titel">
موضوع روابط فرزندان و والدین
    </string>
    <string name="child_01">«پدر و مادر خود را گرامی دار تا در سرزمینی که یهوه خدایت به تو می‌بخشد، روزهایت دراز شود. خروج۲۰-۱۲        (برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="child_02">22آنگاه یهوه خدا از همان دنده‌که از آدم گرفته بود زنی ساخت و او را نزد آدم آورد. 23آدم گفت:هر یک از شما باید مادر و پدر خود را حرمت نهَد. نیز باید شَبّاتهای مرا نگاه دارید: من یهوه خدای شما هستم. لاویان۱۹-۳        (برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="child_03">22آنگاه یهوه خدا از همان دنده‌که از آدم گرفته بود زنی ساخت و او را نزد آدم آورد. 23آدم گفت:8پسرم، به رهنمود پدر خویش گوش فرا ده
و تعلیم مادر خویش را ترک منما؛
9زیرا تاج زیبا بر سرت
و جواهر بر گردنت خواهد بود. امثال۱-۸و۹        (برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="child_04">22آنگاه یهوه خدا از همان دنده‌که از آدم گرفته بود زنی ساخت و او را نزد آدم آورد. 23آدم گفت:جوان را در رفتن به راهی که درخور اوست تربیت کن،
که تا پیری هم از آن منحرف نخواهد شد. امثال۲۲-۶        (برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="child_05">22آنگاه یهوه خدا از همان دنده‌که از آدم گرفته بود زنی ساخت و او را نزد آدم آورد. 23آدم گفت:3او در پاسخ گفت: «و شما چرا برای حفظ سنّت خویش، حکم خدا را زیر پا می‌گذارید؟ 4زیرا خدا فرموده است: ”پدر و مادر خود را گرامی دار“ و نیز ”هر که پدر یا مادر خود را ناسزا گوید، البته باید کشته شود.“ 5امّا شما می‌گویید اگر کسی به پدر یا مادرش بگوید: ”هر کمکی که ممکن بود از من دریافت کنید، وقف خداست،“ 6در این صورت، دیگر بر او واجب نیست این‌گونه پدرِ خود را گرامی دارد. این‌چنین شما برای حفظ سنّت خویش کلام خدا را باطل می‌شمارید. متی۱۵-۳الی۶        (برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="child_06">22آنگاه یهوه خدا از همان دنده‌که از آدم گرفته بود زنی ساخت و او را نزد آدم آورد. 23آدم گفت:1ای فرزندان، از والدین خود در خداوند اطاعت کنید، زیرا کار درست این است. 2«پدر و مادر خود را گرامی دار»، که این نخستین حکمِ با وعده است: 3«تا سعادتمند باشی و بر زمین عمرِ طولانی کنی.»
4ای پدران، فرزندان خود را خشمگین مسازید، بلکه آنها را با تعلیم و تربیت خداوند بزرگ کنید. افسسیان۶-۱الی۴        (برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="mohabat_titel">
موضوع محبت
    </string>
    <string name="mohabat">
محبت
    </string>
    <string name="mohabat_01">یهوه خدای خود را با تمامی دل و با تمامی جان و با تمامی قوّت خود محبت کن. تثنیه ۶-۵
                (برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="mohabat_02"> و اکنون ای اسرائیل، یهوه خدایت از تو چه می‌خواهد، جز آنکه از یهوه خدایت بترسی و در همۀ راههایش گام برداری و او را دوست بداری و یهوه خدای خود را به تمامی دل و تمامی جان خود عبادت کنی تثنیه۱۰-۱۲
                 (برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="mohabat_03">پس اگر به فرمانهایی که من امروز به شما امر می‌فرمایم براستی گوش فرا دهید و یهوه خدای خود را دوست داشته، او را با تمامی دل و جان خود عبادت کنید، 14او باران را برای زمین شما در موسمش خواهد فرستاد، یعنی باران اوّلین و آخرین را تا غله و شراب و روغن خود را گرد آورید. تثنیه ۱۱آیات۱۳ و۱۴
                (برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="mohabat_04">به سخنان آن نبی یا خواب‌بیننده گوش مگیرید، زیرا یهوه خدایتان شما را می‌آزماید تا بداند آیا یهوه خدای خود را با تمامی دل و تمامی جان خود دوست می‌دارید یا نه؟ تثنیه ۱۳-۳
                (برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="mohabat_05">یهوه خدایتان دل شما و دل فرزندان شما را ختنه خواهد کرد تا او را با تمامی دل و جان خود دوست داشته، زنده بمانید. تثنیه ۳۰-۶
                (برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="mohabat_06">زیرا امروز به شما فرمان می‌دهم که یهوه خدای خود را دوست بدارید و در راههای او گام بردارید و فرمانها و فرایض و قوانین او را نگاه دارید، تا زنده بمانید و بر شمارتان افزوده گشته، یهوه خدایتان شما را در سرزمینی که برای تصرفش بدان داخل می‌شوید، برکت دهد.یهوه خدای خود را دوست بدارید، از صدای او اطاعت کنید و به او بچسبید، زیرا او زندگیِ شما و درازی عمر شماست، تا در سرزمینی که خداوند برای پدرانتان، ابراهیم و اسحاق و یعقوب، سوگند خورد که آن را بدیشان دهد، قرار یابید. تثنیه ۳۰-۱۶و۲۰
                (برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="mohabat_07">پس بسیار مراقب باشید تا یهوه خدایتان را محبت نمایید. یوشع ۲۳-۱۱
                (برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="mohabat_08">1اگر به زبانهای آدمیان و فرشتگان سخن گویم، ولی محبت نداشته باشم، زنگی پرصدا و سنجی پرهیاهو بیش نیستم. 2اگر قدرت نبوّت داشته باشم و بتوانم جملۀ اَسرار و معارف را درک کنم، و اگر چنان ایمانی داشته باشم که بتوانم کوهها را جا‌به‌جا کنم، امّا محبت نداشته باشم، هیچم. 3اگر همۀ دارایی خود را صدقه دهم و تن خویش به شعله‌های آتش بسپارم، امّا محبت نداشته باشم، هیچ سود نمی‌برم.
4محبت بردبار و مهربان است؛ محبت حسد نمی‌برد؛ محبت فخر نمی‌فروشد و کبر و غرور ندارد. 5رفتار ناشایسته ندارد و نفع خود را نمی‌جوید؛ به آسانی خشمگین نمی‌شود و کینه به دل نمی‌گیرد؛ 6محبت از بدی مسرور نمی‌شود، امّا با حقیقت شادی می‌کند. 7محبت با همه چیز مدارا می‌کند، همواره ایمان دارد، همیشه امیدوار است و در همه حال پایداری می‌کند.
8محبت هرگز پایان نمی‌پذیرد. امّا نبوّتها از میان خواهد رفت و زبانها پایان خواهد پذیرفت و معرفت زایل خواهد شد. 9زیرا معرفت ما جزئی است و نبوّتمان نیز جزئی؛ 10امّا چون کامل آید، جزئی از میان خواهد رفت. 11آنگاه که کودکی بیش نبودم، چون کودکان سخن می‌گفتم و چون کودکان می‌اندیشیدم و نیز چون کودکان استدلال می‌کردم. امّا چون مرد شدم، رفتارهای کودکانه را ترک گفتم. 12آنچه اکنون می‌بینیم، چون تصویری محو است در آینه؛ امّا زمانی خواهد رسید که روبه‌رو خواهیم دید. اکنون شناخت من جزئی است؛ امّا زمانی فرا خواهد رسید که به کمال خواهم شناخت، چنانکه به کمال نیز شناخته شده‌ام.
13و حال، این سه چیز باقی می‌ماند: ایمان، امید و محبت. امّا بزرگترینشان محبت است. اول قرنتیان ۱۳-۱الی۱۳
                (برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="mohabat_09">7ای عزیزان، یکدیگر را محبت کنیم، زیرا محبت از خداست و هر که محبت می‌کند، از خدا مولود شده است و خدا را می‌شناسد. 8آن که محبت نمی‌کند، خدا را نشناخته است، زیرا خدا محبت است. 9محبت خدا این‌چنین در میان ما آشکار شد که خدا پسر یگانۀ خود را به جهان فرستاد تا به واسطۀ او حیات داشته باشیم. 10محبت همین است، نه آنکه ما خدا را محبت کردیم، بلکه او ما را محبت کرد و پسر خود را فرستاد تا کفّارۀ گناهان ما باشد. 11ای عزیزان، اگر خدا ما را این‌چنین محبت کرد، ما نیز باید یکدیگر را محبت کنیم. 12هیچ‌کس هرگز خدا را ندیده است؛ امّا اگر یکدیگر را محبت کنیم، خدا در ما ساکن است و محبت او در ما به کمال رسیده است.
13از این جا می‌دانیم که در او می‌مانیم و او در ما، زیرا که از روح خود به ما داده است. 14و ما دیده‌ایم و شهادت می‌دهیم که پدر، پسر خود را فرستاده است تا نجات‌دهندۀ جهان باشد. 15آن که اقرار می‌کند عیسی پسر خداست، خدا در وی ساکن است و او در خدا. 16پس ما محبتی را که خدا به ما دارد شناخته‌ایم و به آن اعتماد داریم.
خدا محبت است و کسی که در محبت ساکن است، در خدا ساکن است و خدا در او. 17محبت این‌چنین در میان ما به کمال رسیده است تا در روز داوری اطمینان داشته باشیم، زیرا ما در این دنیا همان‌گونه‌ایم که او هست. 18در محبتْ ترس نیست، بلکه محبتِ کامل ترس را بیرون می‌راند؛ زیرا ترس از مکافات سرچشمه می‌گیرد و کسی که می‌ترسد، در محبت به کمال نرسیده است.
19ما محبت می‌کنیم زیرا او نخست ما را محبت کرد. 20اگر کسی ادعا کند که خدا را محبت می‌نماید امّا از برادر خود نفرت داشته باشد، دروغگوست. زیرا کسی که برادر خود را، که می‌بیند، محبت نکند، نمی‌تواند خدایی را که ندیده است، محبت نماید. 21و ما این حکم را از او یافته‌ایم که هر که خدا را محبت می‌کند، باید برادر خود را نیز محبت کند. اول یوحنا ۴-۷الی۲۱
                (برای مطالعه کل باب کلیک کنید)
    </string>
    <string name="ghanaaat">
قناعت
    </string>
    <string name="forootani_khedmat">
فروتنی و خدمت
    </string>
</resources>