<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center|top"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layout_scrollFlags="snapMargins"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btn_etaat"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:text="@string/etaat"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_entegham"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/entegham" />

            <Button
                android:id="@+id/btn_omid"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:text="@string/omid" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_ravabete_farzandan"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/childs" />

            <Button
                android:id="@+id/btn_ravabete_zoj"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/wife" />

            <Button
                android:id="@+id/btn_raasti"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:text="@string/rasti" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_hayatevafer"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"

                android:text="@string/hayatevafer" />

            <Button
                android:id="@+id/btn_davari"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"

                android:text="@string/davari" />

            <Button
                android:id="@+id/btn_doa"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"

                android:text="@string/doa" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_hekmat"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:text="@string/hekmat" />

            <Button
                android:id="@+id/btn_tobe"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:text="@string/tobe" />

            <Button
                android:id="@+id/btn_hayatejavidan"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/hayatejavidan" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_iman"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:text="@string/iman" />

            <Button
                android:id="@+id/btn_jahanam"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:text="@string/jahanam" />

            <Button
                android:id="@+id/btn_bakhshesh"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/bekhshesh" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_mohabat"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:text="@string/mohabat" />

            <Button
                android:id="@+id/btn_ghanaaat"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:text="@string/ghanaaat" />

            <Button
                android:id="@+id/btn_forootani_khedmat"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/forootani_khedmat" />
        </TableRow>


        <TableRow
            android:layout_width="98dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/website" />

            </LinearLayout>
        </TableRow>

    </TableLayout>

    </ScrollView>
</androidx.core.widget.NestedScrollView>